# TargetPointer

./: .gitignore  AGENTS.md  README.md  batch_tts_test.py  pyproject.toml  手工调试文档.md
docs/: README.md  产品路线.md  开发TODO.md  接口与协议.md  架构设计.md  硬件接线与验证.md  硬件规格.md  硬件调试计划.md  硬件调试记录.md  需求说明.md  项目概述.md
firmware/: README.md  platformio.ini
firmware/config/: default_config.hpp
firmware/include/: pointer_protocol.hpp
firmware/src/: main.cpp  pointer_protocol.cpp
firmware/test/: test_pointer_protocol.cpp
hardware/: bom.md  mechanical-notes.md  pin-map.md  power-budget.md
scripts/: README.md  pointer_desktop_app.py  pointer_host_logic.py  pointer_report.py  pointer_runtime.py  pointer_serial.py  pointer_serial_cli.py  pointer_vision_app.py  pointer_voice_agent.py
targetpointer/: __init__.py
targetpointer/reporting/: __init__.py  report.py
targetpointer/runtime/: __init__.py  camera_scan.py  runtime.py  serial_cli.py
targetpointer/ui/: __init__.py  desktop_app.py  launcher.py  realtime_chat.py  voice_client.py
targetpointer/vision/: __init__.py  app.py
targetpointer/voice/: __init__.py  agent.py  voices.py
tests/: test_camera_scan.py  test_pointer_desktop_app.py  test_pointer_host_logic.py  test_pointer_report.py  test_pointer_runtime.py  test_pointer_serial.py  test_pointer_serial_cli.py  test_pointer_vision_app.py  test_pointer_voice_agent.py
