[project]
name = "voicepointer"
version = "0.1.0"
description = "Desktop voice-and-vision pointer project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "platformio>=6.1.19",
    "pyaudio>=0.2.14",
    "pyserial>=3.5",
    "speechrecognition>=3.16.0",
    "ultralytics>=8.4.37",
]
