[project]
name = "targetpointer"
version = "0.2.0"
description = "Fixed-camera person pointing demo with YOLO, serial control, Blue Pill, and SG90"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "platformio>=6.1.19",
    "pyside6>=6.9.1",
    "pyserial>=3.5",
    "ultralytics>=8.4.37",
]
